--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,5 +19,5 @@ jobs:
         uses: cypress-io/github-action@v6.6.1
         with:
           browser: chrome
-          working-directory: ./week-10-cy-automation
+          working-directory: ./week-11-JobSearchAutomation
 
